--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.5",
     "apollo-upload-client": "^17.0.0",
+    "chart.js": "^3.9.1",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.2",
     "react-scripts": "5.0.1",
