--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apexcharts": "^3.35.5",
     "apollo-upload-client": "^17.0.0",
     "chart.js": "^3.9.1",
+    "iconsax-react": "^0.0.8",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
